--- a/Hostel223/MainWindow.xaml
+++ b/Hostel223/MainWindow.xaml
@@ -34,7 +34,14 @@
                 Click="LoginButton_Click" 
                 Width="100" 
                 Height="30" 
-                HorizontalAlignment="Center"
-                Margin="0,20,0,0"/>
+                HorizontalAlignment="Left"
+                Margin="68,10,0,10"/>
+        <Button Grid.Row="4" 
+            Content="Регистрация" 
+            Click="RegisterButton_Click" 
+            Width="100" 
+            Height="30" 
+            HorizontalAlignment="Left"
+            Margin="208,10,0,10"/>
     </Grid>
 </Window>
