--- a/Hostel223/AdminWindow.xaml
+++ b/Hostel223/AdminWindow.xaml
@@ -2,8 +2,8 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Hostel223 - Панель администратора" 
-        Height="500" 
-        Width="700"
+        Height="402" 
+        Width="648"
         WindowStartupLocation="CenterScreen">
 
     <DockPanel>
@@ -31,41 +31,30 @@
                        Margin="0,0,0,20"/>
 
             <StackPanel Orientation="Vertical" Margin="0,10">
-                <Button Content="Управление пользователями" 
+                <Button x:Name="UsersManagementButton"
+                        Content="Управление пользователями" 
                         Width="200" 
                         Height="35" 
                         Margin="0,5"
-                        FontWeight="Bold"/>
+                        FontWeight="Bold"
+                        Click="UsersManagementButton_Click"/>
 
-                <Button Content="Управление номерами" 
+                <Button x:Name="RoomsManagementButton"
+                        Content="Управление номерами" 
                         Width="200" 
                         Height="35" 
                         Margin="0,5"
-                        FontWeight="Bold"/>
+                        FontWeight="Bold"
+                        Click="RoomsManagementButton_Click"/>
 
-                <Button Content="Просмотр статистики" 
+                <Button x:Name="StatisticsButton"
+                        Content="Просмотр статистики" 
                         Width="200" 
                         Height="35" 
                         Margin="0,5"
-                        FontWeight="Bold"/>
-
-                <Button Content="Системные настройки" 
-                        Width="200" 
-                        Height="35" 
-                        Margin="0,5"
-                        FontWeight="Bold"/>
+                        FontWeight="Bold"
+                        Click="StatisticsButton_Click"/>
             </StackPanel>
-
-            <TextBlock Text="Текущие действия:" 
-                       FontSize="14" 
-                       FontWeight="Bold" 
-                       Margin="0,30,0,10"/>
-
-            <ListView Height="150">
-                <ListViewItem>Просмотр логов системы</ListViewItem>
-                <ListViewItem>Настройка прав доступа</ListViewItem>
-                <ListViewItem>Управление резервными копиями</ListViewItem>
-            </ListView>
 
             <Button Content="Выйти" 
                     Click="LogoutButton_Click" 
