--- a/Hostel223/GuestWindow.xaml
+++ b/Hostel223/GuestWindow.xaml
@@ -2,11 +2,11 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Hostel223 - Панель гостя" 
-        Height="450" 
-        Width="600"
+        Height="600" 
+        Width="702"
         WindowStartupLocation="CenterScreen">
 
-    <DockPanel>
+    <DockPanel Margin="0,0,0,-57">
         <!-- Header -->
         <Border DockPanel.Dock="Top" Background="#FFB900" Padding="15">
             <StackPanel Orientation="Horizontal">
@@ -32,22 +32,25 @@
 
             <StackPanel Orientation="Vertical" Margin="0,10">
                 <Button Content="Забронировать номер" 
-                        Width="180" 
+                        Width="200" 
                         Height="35" 
                         Margin="0,5"
-                        FontWeight="Bold"/>
+                        FontWeight="Bold"
+                        Click="BookRoomButton_Click"/>
 
                 <Button Content="Мои бронирования" 
-                        Width="180" 
+                        Width="200" 
                         Height="35" 
                         Margin="0,5"
-                        FontWeight="Bold"/>
+                        FontWeight="Bold"
+                        Click="MyBookingsButton_Click"/>
 
                 <Button Content="Справочная информация" 
-                        Width="180" 
+                        Width="200" 
                         Height="35" 
                         Margin="0,5"
-                        FontWeight="Bold"/>
+                        FontWeight="Bold"
+                        Click="HelpInfoButton_Click"/>
             </StackPanel>
 
             <TextBlock Text="Доступные номера:" 
@@ -55,10 +58,16 @@
                        FontWeight="Bold" 
                        Margin="0,30,0,10"/>
 
-            <ListView Height="120">
-                <ListViewItem>Номер 101 - 2-местный, 1500 руб/ночь</ListViewItem>
-                <ListViewItem>Номер 102 - 3-местный, 2000 руб/ночь</ListViewItem>
-                <ListViewItem>Номер 201 - 1-местный, 1000 руб/ночь</ListViewItem>
+            <ListView x:Name="AvailableRoomsList" Height="150">
+                <ListView.View>
+                    <GridView>
+                        <GridViewColumn Header="Номер" Width="80" DisplayMemberBinding="{Binding Number}"/>
+                        <GridViewColumn Header="Тип" Width="100" DisplayMemberBinding="{Binding Type}"/>
+                        <GridViewColumn Header="Цена" Width="80" DisplayMemberBinding="{Binding Price}"/>
+                        <GridViewColumn Header="Вместимость" Width="80" DisplayMemberBinding="{Binding Capacity}"/>
+                        <GridViewColumn Header="Описание" Width="200" DisplayMemberBinding="{Binding Description}"/>
+                    </GridView>
+                </ListView.View>
             </ListView>
 
             <Button Content="Выйти" 
