--- a/Hostel223/ManagerWindow.xaml
+++ b/Hostel223/ManagerWindow.xaml
@@ -2,8 +2,8 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Hostel223 - Панель менеджера" 
-        Height="500" 
-        Width="700"
+        Height="654" 
+        Width="683"
         WindowStartupLocation="CenterScreen">
 
     <DockPanel>
@@ -35,36 +35,46 @@
                         Width="200" 
                         Height="35" 
                         Margin="0,5"
-                        FontWeight="Bold"/>
+                        FontWeight="Bold"
+                        Click="BookingManagementButton_Click"/>
 
                 <Button Content="Просмотр бронирований" 
                         Width="200" 
                         Height="35" 
                         Margin="0,5"
-                        FontWeight="Bold"/>
+                        FontWeight="Bold"
+                        Click="ViewBookingsButton_Click"/>
 
                 <Button Content="Управление клиентами" 
                         Width="200" 
                         Height="35" 
                         Margin="0,5"
-                        FontWeight="Bold"/>
+                        FontWeight="Bold"
+                        Click="ClientsManagementButton_Click"/>
 
-                <Button Content="Отчеты по загрузке" 
+                <Button Content="Статистика" 
                         Width="200" 
                         Height="35" 
                         Margin="0,5"
-                        FontWeight="Bold"/>
+                        FontWeight="Bold"
+                        Click="StatisticsButton_Click"/>
             </StackPanel>
 
-            <TextBlock Text="Последние бронирования:" 
+            <TextBlock Text="Активные бронирования:" 
                        FontSize="14" 
                        FontWeight="Bold" 
                        Margin="0,30,0,10"/>
 
-            <ListView Height="150">
-                <ListViewItem>Номер 101 - Иванов И.И. (01.01-05.01)</ListViewItem>
-                <ListViewItem>Номер 102 - Петров П.П. (02.01-07.01)</ListViewItem>
-                <ListViewItem>Номер 201 - Сидоров С.С. (03.01-10.01)</ListViewItem>
+            <ListView x:Name="ActiveBookingsList" Height="150">
+                <ListView.View>
+                    <GridView>
+                        <GridViewColumn Header="Номер" Width="80" DisplayMemberBinding="{Binding RoomNumber}"/>
+                        <GridViewColumn Header="Клиент" Width="120" DisplayMemberBinding="{Binding ClientName}"/>
+                        <GridViewColumn Header="Заезд" Width="80" DisplayMemberBinding="{Binding CheckInDate, StringFormat=dd.MM.yyyy}"/>
+                        <GridViewColumn Header="Выезд" Width="80" DisplayMemberBinding="{Binding CheckOutDate, StringFormat=dd.MM.yyyy}"/>
+                        <GridViewColumn Header="Статус" Width="80" DisplayMemberBinding="{Binding Status}"/>
+                    </GridView>
+                </ListView.View>
             </ListView>
 
             <Button Content="Выйти" 
